Dark mode fixed, Login & Logout logic were implemented (Default username and password are '1111', Classes structures were written (their bodies are empty), list of students, TAs, and Professors are now shown (in seperate tables)

--- a/assets/css/lesson/users.css
+++ b/assets/css/lesson/users.css
@@ -84,7 +84,6 @@
 }
 
 #users-box > div:nth-child(2) {
-    background-color: #eee;
     padding: 1rem;
     border: 0.1rem solid #aaa;
     border-radius: 0.2rem;
@@ -93,7 +92,6 @@
 }
 
 #users-box > div:nth-child(2) > div:first-child {
-    background-color: #fff;
     padding: 1rem;
     border: 0.1rem solid #aaa;
     border-radius: 0.2rem;
@@ -131,7 +129,7 @@
     margin: 0;
 }
 
-#users-list > div:last-child > div > ul:nth-child(1) {
+#users-list > div:last-child > div > ul:nth-child(2) {
     background-color: #73859f;
 }
 
@@ -142,30 +140,6 @@
 #users-list > div:last-child > div > ul li img {
     height: 1rem;
     cursor: pointer;
-}
-
-#users-list > div:last-child > div > ul li:first-child {
-    width: 20%;
-}
-
-#users-list > div:last-child > div > ul li:nth-child(2) {
-    width: 15%;
-}
-
-#users-list > div:last-child > div > ul li:nth-child(3) {
-    width: 25%;
-}
-
-#users-list > div:last-child > div > ul li:nth-child(4) {
-    width: 15%;
-}
-
-#users-list > div:last-child > div > ul li:nth-child(5) {
-    width: 15%;
-}
-
-#users-list > div:last-child > div > ul li:last-child {
-    width: 5%;
 }
 
 #users-list > div > div {
@@ -206,4 +180,8 @@
     padding: 0.5rem;
     border-radius: 0.2rem;
     width: 15rem;
+}
+
+.w-30 {
+    width: 30%;
 }
